# eulers

./: Cargo.toml
eulers/: Cargo.toml
eulers/benches/: solution_benchmarks.rs
eulers/src/: helpers.rs  lib.rs  solutions.rs
eulers/src/helpers/: fibonacci.rs  fizzbuzz.rs  prime.rs
eulers/src/solutions/: p0001.rs  p0002.rs  p0003.rs  p0004.rs  p0005.rs  p0006.rs  p0007.rs  p0008.rs  p0009.rs  p0010.rs  p0011.rs  p0012.rs  p0013.rs  p0014.rs  p0015.rs  p0016.rs  p0017.rs  p0018.rs  p0019.rs  p0020.rs  p0021.rs  p0022.rs  p0023.rs  p0024.rs  p0025.rs  p0026.rs  p0027.rs  p0028.rs  p0029.rs  p0030.rs  p0031.rs  p0032.rs
scratch/: Cargo.toml
scratch/src/: main.rs
solutions/: Cargo.toml
solutions/src/: main.rs
