[package]
name = "eulers"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
crabtime = "1.1.1"
num-bigint = "0.4.6"
num-integer = "0.1.46"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
paste = "1.0.15"

[[bench]]
name = "solution_benchmarks"
harness = false
